Mac Osx compatibility for debug
Mac Osx compatibility for debug.
Modified start_openocd.sh and lanch.json

--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "servertype": "external",
             // This may need to be "arm-none-eabi-gdb" for older builds
-            "gdbPath" : "gdb-multiarch",
+            "gdbPath" : "arm-none-eabi-gdb",
             // Connect to an already running OpenOCD instance
             "gdbTarget": "127.0.0.1:3333",
             "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
